web/airflow-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: airflow-web
  name: airflow-web
  namespace: airflow
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: web
    nodePort: 30965
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: airflow-web
    release: airflow
  sessionAffinity: None
  type: NodePort
