web/airflow-web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: airflow-web
  name: airflow-web
  namespace: airflow
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: airflow-web
    weight: 100
  wildcardPolicy: None
